--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,9 @@
     <string name="option_b">Option B</string>
     <string name="option_c">Option C</string>
     <string name="option_d">OptionD</string>
+    <string name="made_with_love_3"><![CDATA[Made with Love <3]]></string>
+    <string name="settings">Settings</string>
+    <string name="start_game">Start Game</string>
+    <string name="dashboard">Dashboard</string>
 
 </resources>
